--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         <div class="hero__content__bottom">
           <div class="lottie__wrapper">
             <img style="height: 320px; width: 320px;" data-w-id="a30abc85-0134-f47b-b8e8-709dd7c18690"
-              class="lottie-animation lottie__image" data-animation-type="lottie" src="./images/banner.png" data-loop="1"
+              class="lottie-animation lottie__image" data-animation-type="lottie" src="./images/logoh.jpg" data-loop="1"
               data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg"
               data-default-duration="11.266666666666667" data-duration="0" />
           </div>
@@ -503,7 +503,7 @@
           <div class="hero__content__bottom">
             <div class="lottie__wrapper">
               <img style="height: auto; width: 300px;" data-w-id="a30abc85-0134-f47b-b8e8-709dd7c18690"
-                class="lottie-animation lottie__image" data-animation-type="lottie" src="./images/banner.png" data-loop="1"
+                class="lottie-animation lottie__image" data-animation-type="lottie" src="./images/logoh.jpg" data-loop="1"
                 data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg"
                 data-default-duration="11.266666666666667" data-duration="0" />
             </div>
@@ -661,7 +661,7 @@
           </div>
 
 
-          <img src="./images/banner.png" style="max-width: 250px;border-radius: 10px;" loading="lazy" alt="" class="image" />
+          <img src="./images/logoh.jpg" style="max-width: 250px;border-radius: 10px;" loading="lazy" alt="" class="image" />
           <div class="about__paragraph__wrapper">
             <p class="paragraph-5">🌟 Welcome to PEPEWIFBEARD! 🌟
               <br>
@@ -1067,7 +1067,7 @@
         <div class="follow__container">
           <div class="follow__content">
             <div class="follow__content__top">
-              <img style="width: 400px; border-radius: 12px;" src="./images/banner.png" loading="lazy" alt="" class="image-7" />
+              <img style="width: 400px; border-radius: 12px;" src="./images/logoh.jpg" loading="lazy" alt="" class="image-7" />
             </div>
             <div class="follow__content__middle">
               <h1 class="follow__heading__stroke">follow us</h1>
