--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
                       <div class="inner__content__right__bottom">
                         <h1 class="heading-CRIPS">Community-Driven</h1>
                       </div>
-                      <p class="paragraph-4">Get ready for a whole new level of community involvement as PEPEWIFBEARD joins the PumpFun platform! Our project thrives on active community engagement.
+                      <p class="paragraph-4">Get ready for a whole new level of community involvement as PEPEWIFBEARD ! Our project thrives on active community engagement.
 
                       </p>
                       <div class="inner__content__right__bottom">
