--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
       <nav role="navigation" class="navigation__menu w-nav-menu">
         <a href="buylink" data-w-id="1d7c51b5-4816-59bc-69e9-5c7e0e9a91b8" class="nav__link is--1 w-nav-link" style="    font-family: 'Gulfsdisplay expanded', sans-serif;
           color: white;
-      ">Raydium</a>
+      ">Uniswap</a>
         <a href="dexslink" data-w-id="1d7c51b5-4816-59bc-69e9-5c7e0e9a91ba" class="nav__link is--2 w-nav-link" style="    font-family: 'Gulfsdisplay expanded', sans-serif;
           color: white;
       ">CHART</a>
