--- a/index.html
+++ b/index.html
@@ -915,10 +915,10 @@
                         <div class="date__ribbon__wrapper">
                           <div class="date__ribbon__container">
                             <div class="date__ribbon__content__left is--red">
-                              <h1 class="number">$PEPEWIFBEARD</h1>
+                              <h1 class="number">$PWB</h1>
                             </div>
                             <div class="date__ribbon__content__right">
-                              <h1 class="date is--red">$PEPEWIFBEARD</h1>
+                              <h1 class="date is--red">$PWB</h1>
                             </div>
                           </div>
                         </div>
@@ -930,7 +930,7 @@
                         Name : PEPEWIFBEARD
                         <br>
                         <br>
-                        Ticker : $PEPEWIFBEARD
+                        Ticker : $PWB
                         <br>
                         <br>
                         Supply : 1,000,000,000
