--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
           </div>
 
 
-          <img src="./images/logoh.jpg" style="max-width: 250px;border-radius: 10px;" loading="lazy" alt="" class="image" />
+          <img src="/images/2.jpg" style="max-width: 250px;border-radius: 10px;" loading="lazy" alt="" class="image" />
           <div class="about__paragraph__wrapper">
             <p class="paragraph-5">🌟 Welcome to PEPEWIFBEARD! 🌟
               <br>
