--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
           <h1 class="heading__about">$PEPEWIFBEARD <br><br></h1>
         </div>
         <div class="cards__heading__content__right">
-          <p class="paragraph-6">PEPEWIFBEARD Token is a community-driven cryptocurrency inspired by the growing intersection of meme culture. Born from the playful spirit of meme coins like Pepe and the strength of the bearded community, PEPEWIFBEARD Token is designed to bring both fun and utility to the world of crypto.<br />
+          <p class="paragraph-6">PepeWifBeard is the latest meme coin chaos—think Pepe and Wif with a beard, fueled by pure internet hype. There’s no utility, just vibes and the power of memes. It’s made for degens who love riding the wild waves of crypto.<br />
           </p>
         </div>
       </div>
